# Courses

./: .gitignore  3.llm_chain.py  README.md
AlgoTrading-freecodecamp/: AlgoTrading.ipynb  main.py  pyproject.toml
ArjanCodesPythonTips/: 1. comprehensions.ipynb  2. f-strings.ipynb  3. builtin.ipynb  4. generators.ipynb  5. contextManagers.ipynb  6. libraries.ipynb  7. typeHnts.ipynb  8. abstraction.ipynb  9. class_functions.ipynb  README.md  example.db  example.txt
Gen-AI-freecodecamp/: 01_DataPreprocessing.ipynb  02_FeatureEngineering.ipynb  03.ipynb
Learn-Polars/: Polars-intro.ipynb
Learn-PySpark/: 02.createDataFrame.ipynb  07.ReadParquetFiletoDF.ipynb  26. agg() function in PySpark.ipynb  33.fillna(), fill() functions.ipynb  44.partitionBy().ipynb
Learn-Pytest/: README.md  main.py  pyproject.toml
Learn-Spark-definitive-guide/: 01_spark_read.ipynb
LearnApacheIceberg/: WritingThroughPySparkAPI.ipynb  iceberg-inc.ipynb  iceberg-intro.ipynb  main.py  pyproject.toml
LearnDLfromAndrejKarpathy/: 01-micrograd-from-scratch.ipynb  02-makemore.ipynb  main.py  pyproject.toml
LearnDeltaLake/: Readme.md
LearnLLMTraining/: LLM-Training.ipynb  main.py  pyproject.toml
LearnTerraform/: main.tf  terraform.tfstate  terraform.tfstate.backup
Linux-Commands/: index.html
PythonIntermediateCourse/: 01_lists.py  02_tuples.py  03_dictionaries.py  04_sets.py  05_strings.py  06_collections.py  07_itertools.py  08_lambda.py  09_Error_and_Exception.py  11_json.py  13_decorators.py  14_generators.py
fastmcp-tutorial/: main.py  pyproject.toml
jenkins-101/: Dockerfile
(+326 files in other folders)
